# BayesLIM

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
bayescal/: __init__.py  beam.py  beam_model.py  calibration.py  cosmo.py  instrument.py  optim.py  rime.py  sampler.py  sky.py  sky_model.py  special.py  telescope.py  telescope_model.py  utils.py  uvdata_interface.py
bayescal/data/: jl_zeros.csv  realization_0_downselect.uvh5
bayescal/data/configs/: pointsource_channel_cat.yaml  pointsource_powerlaw_cat.yaml
bayeslim/: __init__.py  beam_model.py  bfgs.py  calibration.py  cosmology.py  dataset.py  fft.py  filt.py  hessian.py  hmat.py  imaging.py  io.py  linalg.py  linear_model.py  optim.py  paramdict.py  rime.py  rime_model.py  sampler.py  sky_model.py  special.py  sph_harm.py  telescope_model.py  utils.py  uvdata_interface.py  version.py  visdata.py
bayeslim/data/: 2458101.sum.true_gains.singletime_downselect.calfits  __init__.py  hera_hex37_full_gleam_plus_brights_v01_downselect.uvh5  hera_hex37_gsm2008_downselect.uvh5
bayeslim/data/configs/: GLEAM_ATEAM.yml  pointsource_channel_cat.yaml  pointsource_powerlaw_cat.yaml
bayeslim/tests/: test_beam.py  test_bfgs.py  test_calibration.py  test_dataset.py  test_filt.py  test_imaging.py  test_linear_model.py  test_rime.py  test_sky.py  test_telescope.py
ci/: bayeslim_tests.txt  bayeslim_tests.yaml  install_conda.sh
docs/: conf.py  examples.rst  index.md  index.rst  install.md  introduction.md  make_index.py  tutorials.md
docs/notebooks/: beam_fg_demo.ipynb  minibatching_and_distributed_training.ipynb
notebooks/: getting_started.ipynb
